--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body { background:#eaf5ffff; }
+body { background:rgb(255, 255, 255); }
 body * { font-family: 'Open Sans', sans-serif; }
 
 .page {
